fixing text alignment and margin

--- a/regalo.css
+++ b/regalo.css
@@ -127,7 +127,7 @@ p {
   }
   .regalo-container {
     padding-top: .5rem;
-    margin: 0rem 2rem;
+    margin: 0rem 1.5rem;
     line-height: 1.6rem;
   }
   h2 {
